--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
 
             buildConfigField("String", "API_KEY", "\"8092564df0114149cdffdd71133443c3\"")
             buildConfigField("String", "BASE_URL", "\"http://api.openweathermap.org/\"")
+            buildConfigField("String", "DATABASE_NAME", "\"weather-database\"")
         }
         release {
             minifyEnabled false
@@ -24,6 +25,7 @@ android {
 
             buildConfigField("String", "API_KEY", "\"8092564df0114149cdffdd71133443c3\"")
             buildConfigField("String", "BASE_URL", "\"http://api.openweathermap.org/\"")
+            buildConfigField("String", "DATABASE_NAME", "\"weather-database\"")
         }
     }
 }
@@ -44,6 +46,7 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     testImplementation "android.arch.persistence.room:testing:1.1.1"
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
